@@ -276,21 +276,20 @@ BEGIN_EVENT_TABLE(wxContextHelpButton, wxBitmapButton)
     EVT_BUTTON(wxID_CONTEXT_HELP, wxContextHelpButton::OnContextHelp)
 END_EVENT_TABLE()
 
-wxContextHelpButton::wxContextHelpButton(wxWindow* parent,
+bool wxContextHelpButton::Create(wxWindow* parent,
                                          wxWindowID id,
                                          const wxPoint& pos,
                                          const wxSize& size,
                                          long style)
-#if defined(__WXPM__)
-                   : wxBitmapButton(parent, id, wxBitmap(wxCSQUERY_BITMAP
-                                                         ,wxBITMAP_TYPE_BMP_RESOURCE
-                                                        ),
-                                    pos, size, style)
-#else
-                   : wxBitmapButton(parent, id, wxBitmap(csquery_xpm),
-                                    pos, size, style)
-#endif
 {
+    return wxBitmapButton::Create(parent, id,
+#if defined(__WXPM__)
+                                  wxBitmap(wxCSQUERY_BITMAP,
+                                           wxBITMAP_TYPE_BMP_RESOURCE),
+#else
+                                  wxBitmap(csquery_xpm),
+#endif
+                                  pos, size, style);
 }
 
 void wxContextHelpButton::OnContextHelp(wxCommandEvent& WXUNUSED(event))
