@@ -12,3 +12,4 @@ Note: This file contains the list of changes since wxWidgets 3.x, please see
 All (GUI):
 
 - XRC handler for wxAuiToolBar added (Kinaou Hervé).
+- Add default ctor and Create() to wxContextHelpButton (Hanmac).
